Enable automatic GitHub Releases for Android and iOS builds

--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -6,6 +6,9 @@ on:
     branches: [ main, master ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     name: Build iOS
@@ -38,9 +41,16 @@ jobs:
           mkdir -p Payload
           cp -r ios/App/build/Build/Products/Release-iphoneos/App.app Payload/
           zip -r App.ipa Payload
-          
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v4
+
+      - name: Create Release and Upload IPA
+        uses: softprops/action-gh-release@v2
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
         with:
-          name: ios-ipa
-          path: App.ipa
+          tag_name: v1.0.${{ github.run_number }}
+          name: Release v1.0.${{ github.run_number }}
+          draft: false
+          prerelease: false
+          files: |
+            App.ipa
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
